# modelsandbox

./: README.rst  classes.ipynb  example.ipynb  nested_classes.ipynb  pyproject.toml  requirements-testing.txt  testing.ipynb
example/: __init__.py  model.py
hsm/rtl_seg/: model.py  model2.py
hsm/rtl_seg/schemas/: spf.json
modelsandbox/: __init__.py  helpers.py  model.py  processors.py
modelsandbox/model/: __init__.py  base.py  containers.py  cursor.py  example.py  layer.py  model.py  pointer.py  processors.py  structure.py
modelsandbox_old/: __init__.py  globals.py  model.py  processors.py  validation.py
modelsandbox_old/model/: containers.py  example.py  model.py  processors.py
sample_model/: __init__.py  model.py
sample_model/schemas/: af_shoulder_type.json  validation.json
